Addressed cmn 85 of issue 878. Was using word-wrap: nowrap to keep all elements in a line. Now set div.info to have normal word-wrap so the help text doesn't overflow.

--- a/gbif-ipt/src/main/webapp/styles/main.css
+++ b/gbif-ipt/src/main/webapp/styles/main.css
@@ -932,6 +932,10 @@ table#admintable td {
 table#admintable tr {
   height: 100px;
 }
+
+table#admintable td div.info {
+  white-space: normal;
+}
 table#user-list { width: 940px; }
 table#user-list thead { background-color: #eee; }
 table#user-list tbody tr td { display: table-cell; }
